Set up the working directory

--- a/main/Makefile.am
+++ b/main/Makefile.am
@@ -1,6 +1,18 @@
 ACLOCAL_AMFLAGS = -I m4
 
 bin_PROGRAMS = \
-	test_kdv_equation
+	test_kdv_equation \
+	test_deriv_first
+
+LDADD = libderivatives.a
+
+lib_LIBRARIES = libderivatives.a
+
+libderivatives_a_SOURCES = \
+	deriv_first.c
+
+TESTS = test_deriv_first
+
+
 
 
